--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.1.3",
+    "react-native-segmented-control-tab": "^4.0.0",
+    "react-native-textarea": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
