--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
+    "moment": "^2.30.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-arraylist-view": "^0.1.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.1.3",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-segmented-control-tab": "^4.0.0",
-    "react-native-textarea": "^1.0.4"
+    "react-native-textarea": "^1.0.4",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
